AX: List item marker not exposed when not a direct child of a list item https://bugs.webkit.org/show_bug.cgi?id=236777 <rdar://problem/89082485>

Reviewed by Adrian Perez de Castro.

Source/WebCore:

It can happen that the marker is not a direct child of a list item, in which case the marker is ignored and not
exposed to ATs.

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::parentObjectUnignored const): In case of list marker find the marker list item.
(WebCore::AccessibilityRenderObject::markerRenderer const): Helper to return the list item marker renderer.
(WebCore::AccessibilityRenderObject::addListItemMarker): Add always the list item marker as the first child of
list items.
(WebCore::AccessibilityRenderObject::addChildren): Do not add list item marker children, they will be added to
the right parent in addListItemMarker().
* accessibility/AccessibilityRenderObject.h:

Tools:

* WebKitTestRunner/InjectedBundle/atspi/AccessibilityUIElementAtspi.cpp:
(WTR::roleValueToString): Return AXStatic for Text role too.

LayoutTests:

Update test results.

* accessibility/gtk/list-items-always-exposed-expected.txt:
* accessibility/gtk/list-items-always-exposed.html:
* accessibility/gtk/spans-expected.txt:
* accessibility/gtk/spans.html:
* platform/gtk/TestExpectations:


Canonical link: https://commits.webkit.org/247789@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290502 268f45cc-cd09-0410-ab3c-d52691b4dbfc